@@ -979,6 +979,22 @@ Short(s) : \n\r\
 Runs the given file as Javascript.  See the Programming Guide for more information \
 on how to write Javascript for CoffeeMud.
 
+MPRUN=\
+Command  : MPRUN\n\r\
+Usage    : MPRUN ([USER]:[PASS]) [SCRIPT]\n\r\
+Example  : mprun once_prog;mpecho hello!;~;\n\r\
+Example  : mprun load=mine.script\n\r\
+Example  : mprun archons:password once_prog;mpecho hello!;~;\n\r\
+Short(s) : \n\r\
+Runs the given script as per the Scriptable behavor.  Since Scriptable scripts are \
+event-triggered, any commands executed must be in a ONCE_PROG trigger (or perhaps \
+a RAND_PROG).\n\r\
+\n\r\
+For use as part of automated testing, MPRUN can also be executed by unauthorized users \
+so long as they know the username and password of an authorized user.  Any failed attempts \
+to use this command will cause the user to be marked as unable to use this command for \
+two minutes.
+
 WIZINFO=\
 Command : WIZINFO\n\r\
 Short(s): \n\r\
